--- a/personalInformation.html
+++ b/personalInformation.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="marco.html">Curicullum Vitae</a>
+        <a class="navbar-brand" href="marco.html">CV - 12190081</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
