--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Marco Marcellino - Home Page</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container bg-secondary">
     	<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
-  			<a class="navbar-brand" href="marco.html">CV - 12190081</a>
+  			<a class="navbar-brand" href="index.html">CV - 12190081</a>
   			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
 	  		</button>
@@ -37,7 +37,7 @@
 	    		</ul>
 	 		  </div>
 		  </nav>
-      <div class="container my-4">
+      <div class="container my-4 pb-4">
         <div class="row">
           <div class="col-sm-6">
             <div class="card">
@@ -88,7 +88,7 @@
       </div>
     </div>
  <footer class="container">
-  <p style="text-align: center;">&copy; Marco Marcellino</p>
+  <p style="text-align: center;">&copy; Marco Marcelino</p>
 </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
